# rtype

./: Gantt.gan  Tasks
Client/: CMakeLists.txt  Makefile  client  connection.conf  make.sh  sound.conf
Client/cmake_modules/: FindSFML.cmake  FindTGUI.cmake
Client/dependance/tgui/cmake/Modules/: FindSFML.cmake
Client/include/: ConfigurationParser.hh  ConnectionConfiguration.hh  GameController.hh  GameEnum.hh  GameObservable.hh  GameView.hh  IGameListener.hh  IGameObserver.hh  IKeyListener.hh  IMenuListener.hh  IMenuObserver.hh  INetworkListener.hh  IObserver.h  IObserver.hh  ITcpNetworkListener.hh  IUdpNetworkListener.hh  Lock.hh  MenuController.h  MenuController.hh  MenuEnum.h  MenuEnum.hh  MenuObservable.hh  MenuView.h  MenuView.hh  MutexLinux.hh  MyIniParser.hh  NetworkReader.hh  NetworkWriter.hh  Observable.h  Observable.hh  RtypeClient.hh  RtypeProtocol.hh  SoundManager.hh  TcpConnection.hh  TcpNetworkReader.hh  TcpNetworkWriter.hh  ThreadLinux.hpp  ThreadWin32.hpp  UdpConnection.hh  UdpNetworkReader.hh  (+1 more)
Client/include/Graphic/: AObject.h  AObject.hh  BigRocket.h  BigRocket.hh  Camera.hh  IObject.h  IObject.hh  Life.hh  LittleRocket.h  LittleRocket.hh  Monster.h  Monster.hh  Player.h  Player.hh  PlayerPowerUp.h  PlayerPowerUp.hh  ScrollingBackground.h  ScrollingBackground.hh  TextureManager.h  TextureManager.hh  Wall.hh
Client/res/widgets/: Custom.conf
Client/src/: .#GameController.cpp  ConfigurationParser.cpp  ConnectionConfiguration.cpp  GameController.cpp  GameView.cpp  Lock.cpp  MenuController.cpp  MenuView.cpp  MutexLinux.cpp  MutexWin32.cpp  MyIniParser.cpp  NetworkReader.cpp  NetworkWriter.cpp  RtypeClient.cpp  SoundManager.cpp  TcpConnection.cpp  TcpNetworkReader.cpp  TcpNetworkWriter.cpp  ThreadLinux.cpp  ThreadWin32.cpp  UdpConnection.cpp  UdpNetworkReader.cpp  UdpNetworkWriter.cpp  main.cpp
Client/src/Graphic/: AObject.cpp  BigRocket.cpp  Camera.cpp  Life.cpp  LittleRocket.cpp  Monster.cpp  Player.cpp  PlayerPowerUp.cpp  ScrollingBackground.cpp  TextureManager.cpp  Wall.cpp
Server/: CMakeLists.txt  Makefile  TODO  server
Server/include/Application/: ClientException.hh  ClientRoom.hh  ClientServer.hh  Room.hh  Server.hh
Server/include/Game/: AMonster.hh  Camera.hh  CollisionEvent.hh  CollisionReceiver.hh  CollisionSystem.hh  Core.hh  CoreEvent.hh  CoreEventDestroy.hh  CoreEventReceiver.hh  CoreEventSpawn.hh  DestroyableSet.hh  Entity.hh  EntityEvent.hh  EntityEventDeath.hh  EntityEventLife.hh  EntityEventMove.hh  EntityEventReceiver.hh  Monster.hh  Player.hh  Projectile.hh
Server/include/Network/: EndPoint.hh  NetworkException.hh  TcpSocket.hh  TimerObserver.hh
Server/include/Physic/: Body.hh  BodyContainer.hh  BodyEventCollide.hh  BodyEventMove.hh  BodyEventReceiver.hh  World.hh  WorldEvent.hh
Server/include/Protocol/: Protocole.hh  ProtocoleObserver.hh  RtypeProtocol.hh
Server/include/Util/: APlugin.hh  IDGenerator.hh  IDirent.hh  IDynamicFile.hh  LinuxDirent.hh  Lock.h  Lock.hh  Msg.hpp  Mutex.h  Mutex.hh  MutexWin32.h  MutexWin32.hh  Observable.hpp  Observable.tpp  Observer.hpp  PluginLoader.hpp  Receiver.hpp  Thread.hpp  ThreadLinux.hpp  ThreadWin32.hpp  Time.hh  Vec2.hh  WindowDirent.hh  WindowDynamicFile.hh
Server/monsters/: CMakeLists.txt
Server/monsters/include/: BigMonster.hh  LittleMonster.hh
Server/monsters/src/: .#BigMonster.cpp  BigMonster.cpp  LittleMonster.cpp
Server/monsters_ex/: First.hh  Second.hh
Server/src/: main.cpp
Server/src/Application/: ClientRoom.cpp  ClientServer.cpp  Room.cpp  Server.cpp
Server/src/Game/: AMonster.cpp  Camera.cpp  CollisionEvent.cpp  Core.cpp  CoreEventDestroy.cpp  CoreEventSpawn.cpp  DestroyableSet.cpp  Entity.cpp  EntityEventDeath.cpp  EntityEventLife.cpp  EntityEventReceiver.cpp  Monster.cpp  Player.cpp  Projectile.cpp  Ship.cpp
Server/src/Network/: Acceptor.cpp  EndPoint.cpp  Service.cpp  TcpSocket.cpp  Timer.cpp  UdpSocket.cpp
Server/src/Physic/: Body.cpp  BodyEventCollide.cpp  BodyEventMove.cpp  World.cpp
Server/src/Protocol/: Protocole.cpp
Server/src/Util/: APlugin.cpp  Buffer.cpp  Dirent.cpp  DynamicFile.cpp  IDGenerator.cpp  LinuxDirent.cpp  LinuxDynamicFile.cpp  Lock.cpp  Mutex.cpp  MutexLinux.cpp  MutexWin32.cpp  Thread.cpp  ThreadLinux.cpp  ThreadWin32.cpp  Time.cpp  Vec2.cpp  WindowDirent.cpp  WindowDynamicFile.cpp
new_network_rtype/: CMakeLists.txt
new_network_rtype/Debug/: network.ilk
new_network_rtype/include/Application/: ClientRoom.hh  ClientServer.hh  Room.hh  Server.hh
new_network_rtype/include/Game/: CoreEventSpawn.hh  Entity.hh  EntityEventReceiver.hh  Player.hh
new_network_rtype/include/Network/: Acceptor.hh  AcceptorObserver.hh  EndPoint.hh  NetworkException.hh  Service.hh  TcpSocket.hh  TcpSocketObserver.hh  Timer.hh  TimerObserver.hh  UdpSocket.hh  UdpSocketObserver.hh
new_network_rtype/include/Physic/: Body.hh  BodyEvent.hh  Shape.hh
new_network_rtype/include/Protocol/: ProtocolException.hh  Protocole.hh  ProtocoleObserver.hh  RtypeProtocol.hh
new_network_rtype/include/Util/: Buffer.hh  IDGenerator.hh  LinuxDynamicFile.hh  Mutex.hh  Mutex.hh~  Observable.hpp  PluginLoader.hpp  Time.hh  Util.hh  WindowDirent.hh
new_network_rtype/monsters_ex/: How_to_use
new_network_rtype/src/: client.cpp  main.cpp  server.cpp
new_network_rtype/src/Application/: ClientRoom.cpp  ClientServer.cpp  Room.cpp  Server.cpp
new_network_rtype/src/Game/: AMonster.cpp  CollisionReceiver.cpp  CoreEventDestroy.cpp  CoreEventReceiver.cpp  CoreEventSpawn.cpp
new_network_rtype/src/Network/: Acceptor.cpp  Service.cpp  TcpSocket.cpp  Timer.cpp  UdpSocket.cpp
new_network_rtype/src/Physic/: BodyEventReceiver.cpp
new_network_rtype/src/Protocol/: Protocole.cpp
new_network_rtype/src/Util/: Buffer.cpp  Dirent.cpp  DynamicFile.cpp  LinuxDirent.cpp  LinuxDynamicFile.cpp  Mutex.cpp  MutexLinux.cpp  ThreadLinux.cpp  ThreadWin32.cpp  Time.cpp  Util.cpp
new_network_rtype/src/src/: main.cpp
new_network_rtype/src/src/Game/: EntityEventMove.cpp  Projectile.cpp
new_network_rtype/src/src/Network/: TcpSocket.cpp  Timer.cpp  UdpSocket.cpp
src/: main.cpp
(+44 files in other folders)
